--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -677,7 +677,7 @@ section {
   margin: 0 auto;
   width: 64px;
   height: 64px;
-  background: #80ab25;
+  background: #00008C;
   transition: all 0.3s ease-out 0s;
   display: flex;
   align-items: center;
@@ -746,7 +746,7 @@ section {
 # Cta
 --------------------------------------------------------------*/
 .cta {
-  background: linear-gradient(rgba(2, 2, 2, 0.5), rgba(0, 0, 0, 0.5)),
+  background: linear-gradient(rgb(0 0 140), rgb(0 0 140)),
     url('../img/cta-bg.jpg') fixed center center;
   background-size: cover;
   padding: 120px 0;
@@ -1139,7 +1139,7 @@ section {
 
 .contact .info-box i {
   font-size: 32px;
-  color: #80ab25;
+  color: #00008C;
   border-radius: 50%;
   padding: 8px;
   border: 2px dotted #f5a0a0;
